Index Page Setting Done. Header and Footer Separately Included.

--- a/TimesTechWebsite/template/index.html
+++ b/TimesTechWebsite/template/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
-    <link rel="icon" href="static/images/favicon.png">
+    <link rel="icon" href="static/images/thetimes_favicon.png">
 
     <!-- CSS
         ============================================ -->
@@ -360,7 +360,7 @@
                                                         </div>
                                                         <div class="content">
                                                             <h5 class="heading">Quality Assurance System</h5>
-                                                            <div class="text">At Mitech, we have a holistic and integrated approach towards core modernization to experience technological evolution.
+                                                            <div class="text">At TheTimesTech, we have a holistic and integrated approach towards core modernization to experience technological evolution.
                                                             </div>
                                                             <div class="box-images-arrow">
                                                                 <span class="button-text">Discover now</span>
@@ -404,7 +404,7 @@
                                                         </div>
                                                         <div class="content">
                                                             <h5 class="heading">Info Security Management</h5>
-                                                            <div class="text">At Mitech, we have a holistic and integrated approach towards core modernization to experience technological evolution.
+                                                            <div class="text">At TheTimesTech, we have a holistic and integrated approach towards core modernization to experience technological evolution.
                                                             </div>
                                                             <div class="box-images-arrow">
                                                                 <span class="button-text">Discover now</span>
@@ -602,7 +602,7 @@
                         <div class="col-lg-4">
                             <div class="section-title section-space--mb_60">
                                 <h3 class="heading">Our <span class="text-color-primary">experience </span> experts</h3>
-                                <p class="text mt-30">Mitech specializes in technological and IT-related services such as product engineering, warranty management, building cloud, infrastructure, network, etc. </p>
+                                <p class="text mt-30">TheTimesTech specializes in technological and IT-related services such as product engineering, warranty management, building cloud, infrastructure, network, etc. </p>
 
                                 <div class="sider-title-button-box mt-30">
                                     <a href="#" class="ht-btn ht-btn-md">Join us now</a>
@@ -768,9 +768,9 @@
                                                     <img class="img-fluid" src="static/images/projects/case-study-01-480x298.jpg" alt="">
                                                 </div>
                                                 <div class="content">
-                                                    <h6 class="heading">Mitech-Smart Vision</h6>
+                                                    <h6 class="heading">TheTimesTech-Smart Vision</h6>
                                                     <div class="post-categories">Cyber Security</div>
-                                                    <div class="text">At Mitech, we have a holistic and integrated approach towards core modernization to experience technological evolution.
+                                                    <div class="text">At TheTimesTech, we have a holistic and integrated approach towards core modernization to experience technological evolution.
                                                     </div>
                                                     <div class="box-projects-arrow">
                                                         <span class="button-text">View case study</span>
@@ -867,7 +867,7 @@
                         <div class="col-lg-12">
                             <div class="section-title-wrap text-center section-space--mb_40">
                                 <h6 class="section-sub-title mb-20">Testimonials</h6>
-                                <h3 class="heading">What do people praise about <span class="text-color-primary"> Mitech?</span></h3>
+                                <h3 class="heading">What do people praise about <span class="text-color-primary"> TheTimesTech?</span></h3>
                             </div>
                             <div class="testimonial-slider">
                                 <div class="swiper-container testimonial-slider__container">
@@ -895,7 +895,7 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="testimonial-slider__text">I’ve been working with over 35 IT companies on more than 200 projects of our company, but @Mitech is one of the most impressive to me.</div>
+                                                <div class="testimonial-slider__text">I’ve been working with over 35 IT companies on more than 200 projects of our company, but @TheTimesTech is one of the most impressive to me.</div>
 
                                             </div>
                                         </div>
@@ -922,7 +922,7 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="testimonial-slider__text">I’ve been working with over 35 IT companies on more than 200 projects of our company, but @Mitech is one of the most impressive to me.</div>
+                                                <div class="testimonial-slider__text">I’ve been working with over 35 IT companies on more than 200 projects of our company, but @TheTimesTech is one of the most impressive to me.</div>
 
                                             </div>
                                         </div>
@@ -949,7 +949,7 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="testimonial-slider__text">I’ve been working with over 35 IT companies on more than 200 projects of our company, but @Mitech is one of the most impressive to me.</div>
+                                                <div class="testimonial-slider__text">I’ve been working with over 35 IT companies on more than 200 projects of our company, but @TheTimesTech is one of the most impressive to me.</div>
 
                                             </div>
                                         </div>
@@ -976,7 +976,7 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="testimonial-slider__text">I’ve been working with over 35 IT companies on more than 200 projects of our company, but @Mitech is one of the most impressive to me.</div>
+                                                <div class="testimonial-slider__text">I’ve been working with over 35 IT companies on more than 200 projects of our company, but @TheTimesTech is one of the most impressive to me.</div>
 
                                             </div>
                                         </div>
@@ -1073,7 +1073,7 @@
                         <div class="col-lg-5 ml-auto">
                             <div class="contact-info-three text-left">
                                 <h6 class="heading font-weight--reguler">Reach out now!</h6>
-                                <h3 class="call-us"><a href="#">(+00) 123 567990</a></h3>
+                                <h3 class="call-us"><a href="#">(+92) 307 4960094</a></h3>
                                 <div class="text">Start the collaboration with us while figuring out the best solution based on your needs.</div>
                                 <div class="location-button mt-20">
                                     <a href="#" class="location-text-button"><span class="button-icon"></span> <span class="button-text">View on Google map</span></a>
@@ -1111,10 +1111,10 @@
                     <a class="quick-option hint--bounce hint--left hint--black primary-color-hover-important" href="#" aria-label="Quick Options">
                         <i class="fal fa-project-diagram"></i>
                     </a>
-                    <a class="hint--bounce hint--left hint--black primary-color-hover-important" target="_blank" href="https://hasthemes.com/contact-us/" aria-label="Support Center">
+                    <a class="hint--bounce hint--left hint--black primary-color-hover-important" target="_blank" href="https://thetimestech.net/contact-us/" aria-label="Support Center">
                         <i class="fal fa-life-ring"></i>
                     </a>
-                    <a class="hint--bounce hint--left hint--black primary-color-hover-important" target="_blank" href="https://themeforest.net/item/mitech-it-solutions-html-template/24906742?ref=AslamHasib" aria-label="Purchase Mitech">
+                    <a class="hint--bounce hint--left hint--black primary-color-hover-important" target="_blank" href="#" aria-label="Get Quotation">
                         <i class="fal fa-shopping-cart"></i>
                     </a>
                 </div>
@@ -1124,11 +1124,11 @@
             <div class="demo-option-wrapper">
                 <div class="demo-panel-header">
                     <div class="title">
-                        <h6 class="heading mt-30">IT Solutions Mitech - Technology, IT Solutions & Services Html5 Template</h6>
+                        <h6 class="heading mt-30">TheTimesTech provides a complete IT Solution.</h6>
                     </div>
 
                     <div class="panel-btn mt-20">
-                        <a class="ht-btn ht-btn-md" href="https://themeforest.net/item/mitech-it-solutions-html-template/24906742?ref=AslamHasib"><i class="far fa-shopping-cart mr-2"></i> Buy Now </a>
+                        <a class="ht-btn ht-btn-md" href="#"><i class="far fa-file mr-2"></i> Book Appointment </a>
                     </div>
                 </div>
                 <div class="demo-quick-option-list">
