--- a/TimesTechWebsite/template/footer.html
+++ b/TimesTechWebsite/template/footer.html
@@ -1,10 +1,12 @@
+{% load static %}
+
 <div class="footer-area-wrapper bg-gray">
             <div class="footer-area section-space--ptb_80">
                 <div class="container">
                     <div class="row footer-widget-wrapper">
                         <div class="col-lg-4 col-md-6 col-sm-6 footer-widget">
                             <div class="footer-widget__logo mb-30">
-                                <img src="static/images/logo/thetimes_footer_logo.png" class="img-fluid" alt="">
+                                <img src='{% static "images/logo/thetimes_footer_logo.png" %}' class="img-fluid" alt="">
                             </div>
                             <ul class="footer-widget__list">
                                 <li>Office # 78, New Muslim Town Near Canal Road Lahore, Pakistan.</li>
@@ -56,7 +58,7 @@
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-md-6 text-center text-md-left">
-                            <span class="copyright-text">&copy; 2020 TheTimesTech. <a href="https://thetimestech.net/">All Rights Reserved.</a></span>
+                            <span class="copyright-text">&copy; 2020-2021 <a href="https://thetimestech.net/">TheTimesTech</a>. All Rights Reserved.</span>
                         </div>
                         <div class="col-md-6 text-center text-md-right">
                             <ul class="list ht-social-networks solid-rounded-icon">
