Contact Us Page Done.

--- a/TimesTechWebsite/template/footer.html
+++ b/TimesTechWebsite/template/footer.html
@@ -39,7 +39,7 @@
                             <ul class="footer-widget__list">
                                 <li><a href="#" class="hover-style-link">Forum Support</a></li>
                                 <li><a href="#" class="hover-style-link">Help & FAQ</a></li>
-                                <li><a href="#" class="hover-style-link">Contact Us</a></li>
+                                <li><a href="contact-us" class="hover-style-link">Contact Us</a></li>
                                 <li><a href="#" class="hover-style-link">Pricing and plans</a></li>
                                 <li><a href="#" class="hover-style-link">Cookies Policy</a></li>
                             </ul>
@@ -47,8 +47,8 @@
                         <div class="col-lg-2 col-md-4 col-sm-6 footer-widget">
                             <div class="footer-widget__title section-space--mb_50"></div>
                             <ul class="footer-widget__list">
-                                <li><a href="#" class="image_btn"><img class="img-fluid" src="static/images/icons/aeroland-button-google-play.jpg" alt=""></a></li>
-                                <li><a href="#" class="image_btn"><img class="img-fluid" src="static/images/icons/aeroland-button-app-store.jpg" alt=""></a></li>
+                                <li><a href="#" class="image_btn"><img class="img-fluid" src='{% static "images/icons/aeroland-button-google-play.jpg" %}' alt=""></a></li>
+                                <li><a href="#" class="image_btn"><img class="img-fluid" src='{% static "images/icons/aeroland-button-app-store.jpg" %}' alt=""></a></li>
                             </ul>
                         </div>
                     </div>
