--- a/TimesTechWebsite/template/header.html
+++ b/TimesTechWebsite/template/header.html
@@ -137,7 +137,7 @@
                                                     <li class="has-children">
                                                         <a href="#"><span>About us</span></a>
                                                         <ul class="submenu">
-                                                            <li><a href="about-us"><span>About Us</span></a></li>
+                                                            <li><a href="{% url 'about-us' %}"><span>About Us</span></a></li>
                                                             <li class="has-children">
                                                                 <a href="#"><span>Submenu Level Two</span></a>
                                                                 <ul class="submenu">
@@ -148,7 +148,7 @@
                                                             </li>
                                                         </ul>
                                                     </li>
-                                                    <li><a href="#"><span>Contact us</span></a></li>
+                                                    <li><a href="{% url 'contact-us' %}"><span>Contact us</span></a></li>
                                                     <li><a href="#"><span>Leadership</span></a></li>
                                                     <li><a href="#"><span>Why choose us</span></a></li>
                                                     <li><a href="#"><span>Our history</span></a></li>
