--- a/TimesTechWebsite/template/index.html
+++ b/TimesTechWebsite/template/index.html
@@ -1349,9 +1349,7 @@
 
         <!-- Plugins JS (Please remove the comment from below plugins.min.js for better website load performance and remove plugin js files from avobe) -->
 
-        <!--
-    <script src="static/js/plugins/plugins.min.js"></script>
-    -->
+        <script src='{% static "js/plugins/plugins.min.js" %}'></script>
 
         <!-- Main JS -->
         <script src='{% static "js/main.js" %}'></script>
