--- a/TimesTechWebsite/template/quick-sidebar.html
+++ b/TimesTechWebsite/template/quick-sidebar.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <div class="demo-option-container">
     <!-- Start Toolbar -->
     <div class="aeroland__toolbar">
@@ -25,22 +27,22 @@
                 </div>
         <div class="demo-quick-option-list">
                     <a class="link hint--bounce hint--black hint--top hint--dark" href="index-appointment.html" aria-label="Appointment">
-                        <img class="img-fluid" src="static/images/demo-images/home-01.jpg" alt="Images">
+                        <img class="img-fluid" src='{% static "images/demo-images/home-01.jpg" %}' alt="Images">
                     </a>
                     <a class="link hint--bounce hint--black hint--top hint--dark" href="index-infotechno.html" aria-label="Infotechno">
-                        <img class="img-fluid" src="static/images/demo-images/home-02.jpg" alt="Images">
+                        <img class="img-fluid" src='{% static "images/demo-images/home-02.jpg" %}' alt="Images">
                     </a>
                     <a class="link hint--bounce hint--black hint--top hint--dark" href="index-processing.html" aria-label="Processing">
-                        <img class="img-fluid" src="static/images/demo-images/home-03.jpg" alt="Images">
+                        <img class="img-fluid" src='{% static "images/demo-images/home-03.jpg" %}' alt="Images">
                     </a>
                     <a class="link hint--bounce hint--black hint--top hint--dark" href="index-services.html" aria-label="Services">
-                        <img class="img-fluid" src="static/images/demo-images/home-04.jpg" alt="Images">
+                        <img class="img-fluid" src='{% static "images/demo-images/home-04.jpg" %}' alt="Images">
                     </a>
                     <a class="link hint--bounce hint--black hint--top hint--dark" href="index-resolutions.html" aria-label="Resolutions">
-                        <img class="img-fluid" src="static/images/demo-images/home-05.jpg" alt="Images">
+                        <img class="img-fluid" src='{% static "images/demo-images/home-05.jpg" %}' alt="Images">
                     </a>
                     <a class="link hint--bounce hint--black hint--top hint--dark" href="index-cybersecurity.html" aria-label="Cybersecurity">
-                        <img class="img-fluid" src="static/images/demo-images/home-06.jpg" alt="Images">
+                        <img class="img-fluid" src='{% static "images/demo-images/home-06.jpg" %}' alt="Images">
                     </a>
                 </div>
     </div>
