--- a/TimesTechWebsite/template/contact-us.html
+++ b/TimesTechWebsite/template/contact-us.html
@@ -66,7 +66,8 @@
 
                         <div class="col-lg-6 col-lg-6">
                             <div class="contact-form-wrap">
-                                <form id="contact-form" action="https://hasthemes.com/file/mail.php" method="post">
+                                <form id="contact-form" action="{% url 'contact-us' %}" method="post">
+                                    {% csrf_token %}
                                     <div class="contact-form">
                                         <div class="contact-input">
                                             <div class="contact-inner">
@@ -76,15 +77,20 @@
                                                 <input name="con_email" type="email" placeholder="Email *">
                                             </div>
                                         </div>
-                                        <div class="contact-inner">
-                                            <input name="con_subject" type="text" placeholder="Subject *">
+                                        <div class="contact-input">
+                                            <div class="contact-inner">
+                                                <input name="con_contact" type="text" placeholder="Contact *">
+                                            </div>
+                                            <div class="contact-inner">
+                                                <input name="con_subject" type="text" placeholder="Subject *">
+                                            </div>
                                         </div>
                                         <div class="contact-inner contact-message">
                                             <textarea name="con_message" placeholder="Please describe what you need."></textarea>
                                         </div>
                                         <div class="submit-btn mt-20">
                                             <button class="ht-btn ht-btn-md" type="submit">Send message</button>
-                                            <p class="form-messege"></p>
+                                            <p class="form-messege text-success"></p>
                                         </div>
                                     </div>
                                 </form>
