Career page is done.

--- a/TimesTechWebsite/template/header.html
+++ b/TimesTechWebsite/template/header.html
@@ -172,8 +172,7 @@
                                                 </ul>
                                             </li>
                                             <li><a href="#"><span>Projects</span></a></li>
-                                            <li><a href="#"><span>Blog</span></a></li>
-                                            <li><a href="#"><span>Career</span></a></li>
+                                            <li><a href="{% url 'career' %}"><span>Career</span></a></li>
                                             <li><a href="{% url 'contact-us' %}"><span>Contact us</span></a></li>
                                         </ul>
                                     </nav>
