--- a/TimesTechWebsite/template/mobile-overlay-menu.html
+++ b/TimesTechWebsite/template/mobile-overlay-menu.html
@@ -80,10 +80,7 @@
                                 <a href="#">Projects</a>
                             </li>
                             <li>
-                                <a href="#">Blog</a>
-                            </li>
-                            <li>
-                                <a href="#">Career</a>
+                                <a href="{% url 'career' %}">Career</a>
                             </li>
                             <li>
                                 <a href="{% url 'contact-us' %}">Contact Us</a>
