Projects page is done.

--- a/TimesTechWebsite/template/career.html
+++ b/TimesTechWebsite/template/career.html
@@ -104,7 +104,7 @@
                                         </div>
 
                                         <div class="col-md-6">
-                                            <div class="job-description">The Mitech IT team believes in full transparency, being flexible, reliable and being great team players. We are problem solvers, always ready to help and support each other and the organization. </div>
+                                            <div class="job-description">The TheTimesTech IT team believes in full transparency, being flexible, reliable and being great team players. We are problem solvers, always ready to help and support each other and the organization. </div>
                                         </div>
 
                                         <div class="col-md-3">
@@ -126,7 +126,7 @@
                                         </div>
 
                                         <div class="col-md-6">
-                                            <div class="job-description">Mitech is looking for a summer intern to work in the Information &amp; Technology Services area. This position is part of a team which supports Microsoft Server Operating Systems, storage systems, and Client device technologies.</div>
+                                            <div class="job-description">TheTimesTech is looking for a summer intern to work in the Information &amp; Technology Services area. This position is part of a team which supports Microsoft Server Operating Systems, storage systems, and Client device technologies.</div>
                                         </div>
 
                                         <div class="col-md-3">
