--- a/TimesTechWebsite/template/mobile-overlay-menu.html
+++ b/TimesTechWebsite/template/mobile-overlay-menu.html
@@ -77,7 +77,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="#">Projects</a>
+                                <a href="{% url 'projects' %}">Projects</a>
                             </li>
                             <li>
                                 <a href="{% url 'career' %}">Career</a>
