--- a/TimesTechWebsite/template/header.html
+++ b/TimesTechWebsite/template/header.html
@@ -171,7 +171,7 @@
                                                     </li>
                                                 </ul>
                                             </li>
-                                            <li><a href="#"><span>Projects</span></a></li>
+                                            <li><a href="{% url 'projects' %}"><span>Projects</span></a></li>
                                             <li><a href="{% url 'career' %}"><span>Career</span></a></li>
                                             <li><a href="{% url 'contact-us' %}"><span>Contact us</span></a></li>
                                         </ul>
